@@ -8,7 +8,8 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
         "filp/whoops": "^2.1",
-        "barryvdh/laravel-debugbar": "^2.2"
+        "barryvdh/laravel-debugbar": "^2.2",
+        "spatie/laravel-backup": "^3.8"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
